fixed some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,8 @@ button:focus-visible {
   margin: 0 auto;
   width: 95%;
   max-width: 1024px;
+  min-height: 100vh;
+  max-height: 800px;
   border-radius: 20px;
 }
 
@@ -215,5 +217,15 @@ button:focus-visible {
 
 .principles-list {
   list-style-image: url("./assets/icons/check_icon.svg");
+  font-size: 18px;
 }
 
+
+.whatsapp-button-label {
+  display: none;
+  transition: all 300ms ease-in-out;
+}
+
+.whatsapp-button:hover .whatsapp-button-label {
+  display: block;
+}
